src/index.scss
// TODO: separate scss file into smaller files.

// * { outline: 1px solid red; }

// TODO: look into a less hacky way of keeping the viewer from growing too large.
$titleBarHeight: 50px;
$thumbnailRowHeight: 105px;

html
{
	scroll-behavior: smooth;

	&[data-bs-theme='dark']
	{
		.thumbnail-container .thumbnail.current
		{
			border-color: lightpink;
		}
	}

	&[data-bs-theme='light']
	{
		.thumbnail-container .thumbnail.current
		{
			border-color: purple;
		}
	}
}

body
{
	display: flex;
	flex-direction: column;
	overflow: hidden;
	height: 100vh;
}

#title-bar
{
	flex-basis: $titleBarHeight;
    -webkit-app-region: drag;
    -webkit-user-select: none;
    user-select: none;
	display: grid;
	grid-template-columns: repeat(3, 1fr);

	.title-bar-center
	{
		display: flex;
		align-items: center;
		justify-content: center;
		grid-column: 2;

		#titleBarSearch
		{
			text-align: center;
		}
	}

	.title-bar-right
	{
		display: flex;
		align-items: center;
		justify-content: right;
		grid-column: 3;

		#toggleSidebar
		{
			margin-right: .5rem;
		}
	}

	.title-bar-interactable
	{
		-webkit-app-region: none;
		-webkit-user-select: auto;
		user-select: auto;
	}
}

.content
{
	flex: 1;
	overflow: scroll;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.viewer
{
	height: calc(100vh - $titleBarHeight - $thumbnailRowHeight);
	display: grid;
	grid-template-columns: auto 250px;
	grid-template-rows: minmax(0, 1fr);

	.photo
	{
		// padding: .5rem 0 0 0;
		background-size: contain;
		background-repeat: no-repeat;
		background-position: center;
	}

	.sidebar
	{
		min-height: 0;
		overflow-y: scroll;
		font-size: .8rem;
		padding: .5rem;

		.sidebar-section-header
		{
			font-weight: 700;
			margin: 0 0 .5rem 0;
		}

		.sidebar-tag-container
		{
			margin: 0 0 .5rem 0;
		}

		input
		{
			font-size: .8rem;
		}
	}
}

.thumbnail-container
{
	flex-grow: 0;
	display: flex;
	gap: 5px;
	overflow-x: scroll;
	height: $thumbnailRowHeight;
	scroll-behavior: smooth;

	.thumbnail
	{
		height: 100%;
		width: auto;
		border: 1px solid transparent;
		padding: 5px;
		border-radius: 5px;
	}
}

